# scope-split-screen

./: .gitignore  README.md  pyproject.toml
src/scope_combine_streams/: __init__.py  pipeline.py  plugin.py  schema.py
src/scope_split_screen/: __init__.py  pipeline.py  plugin.py  schema.py
