[project]
name = "scope-combine-streams"
version = "0.1.0"
description = "Combines two video input streams into a single output for Daydream Scope"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = []

[project.entry-points.scope]
combine_streams = "scope_combine_streams:plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_combine_streams"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
