[project]
name = "scope-split-screen"
version = "0.1.0"
description = "Split-screen plugin for Daydream Scope — stacks two video streams vertically"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = []

[project.entry-points.scope]
split_screen = "scope_split_screen:plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_split_screen"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
